@@ -9,6 +9,7 @@ This file details the changelog of Qiling Framework.
 - De-flattern with IDA plugin now supports ARM && ARM64 with experimental IDA mircocode API.
 - Snapshot mechanism allows saving and restoring of OS and Loader information.
 - Welcome Lazymio and Kabeor to the team
+- Fixed directory traversal bug
 
 
 ------------------------------------
